style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    width: 100%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: 'Roboto', sans-serif;
    font-size: 13px;
    color: #444C58;
}

/* .main {
    position: relative;
    width: 480px;
    height: 90vh;
    border: 1px solid #707070;
    overflow-y: auto;
} */

.nav {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 70px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #1A1B20;
    padding: 16px 20px;
}

.nav img {
    width: 200px;
}

.btnHamburger {
    border: none;
    background: #1A1B20;
    cursor: pointer;
}

.hamburger {
    background: #1A1B20;
    color: #fff;
    width: 32px;
}

.select {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    margin-top: 70px;
    padding: 10px;
}

.select select {
    width: 49%;
    padding: 6px 10px;
    border: 1px solid #ccc;
    border-radius: 6px;
    color: #444C58;
    font-size: 15px;
}

.select select:focus {
    outline: none;
}

.content {
    width: 100%;
}

.content h1 {
    font-size: 17px;
    font-weight: 700;
    color: #fff;
    background: #A2ABB4;
    padding: 6px 20px;
}

.row {
    display: flex;
    align-items: center;
    height: 32px;
    white-space: nowrap;
    overflow-x: scroll;
}

.bg-bold {
    background: rgba(47, 77, 137, 0.1);
}

.empty {
    flex: 0 0 10px;
    height: 19px;
    border-radius: 3px;
    margin: 0 10px;
}

.green {
    background: #5DB760;
}

.cyan {
    background: #029FB2;
}

.purple {
    background: #6B5B83;
}

.red {
    background: #DD794A;
}

.yellow {
    background: #FDB531;
}

.blue {
    background: #3895F2;
}

.time,
.number {
    font-weight: 700;
    font-size: 14px;
    background: rgba(47, 77, 137, 0.1);
    flex: 0 0 60px;
    line-height: 32px;
    text-align: center;
}

.team-name1 {
    text-align: right;
    padding: 0 10px;
    flex: 0 0 150px;
}

.team-name2 {
    flex: 0 0 160px;
    padding: 0 10px;
}

.scores {
    flex: 0 0 70px;
    text-align: center;
    font-weight: 700;
    font-size: 14px;
    background: rgba(47, 77, 137, 0.1);
    line-height: 32px;
}

.stats {
    flex: 0 0 70px;
    font-size: 13px;
    background: rgba(47, 77, 137, 0.1);
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}

.inner-stats {
    width: 85%;
    margin: 0 auto;
    display: flex;
    align-items: center;
    border: 2px solid #5d6570;
    border-radius: 5px;
}

.inner-stats img {
    padding: 0 4px;
}

.scores span {
    color: #88C144;
}

.content svg {
    width: 16px;
    height: 16px;
    text-align: right;
}

.footer {
    width: 100%;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 99999;
    display: flex;
    flex-direction: row;
    background: #6AAA3B;
    border-bottom: 4px solid #4b8025;
}

.footer div {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 10px 0;
}

.footer div:not(:last-child) {
    border-right: 3px solid #5a9c2b;
}

.footer img {
    width: 30px;
}

.footer p {
    color: #fff;
    padding-top: 4px;
}

